--- a/angular.json
+++ b/angular.json
@@ -34,6 +34,15 @@
               "./node_modules/primeicons/primeicons.css",
               "./node_modules/primeng/resources/themes/nova/theme.css",
               "./node_modules/primeng/resources/primeng.min.css",
+              "./node_modules/primeflex/primeflex.css",
+              "./node_modules/primeflex/src/_variables.scss",
+              "./node_modules/primeflex/src/_grid.scss",
+              "./node_modules/primeflex/src/_formlayout.scss",
+              "./node_modules/primeflex/src/_display.scss",
+              "./node_modules/primeflex/src/_text.scss",
+              "./node_modules/primeflex/src/flexbox/_flexbox.scss",
+              "./node_modules/primeflex/src/_spacing.scss",
+              "./node_modules/primeflex/src/_elevation.scss",
               "src/styles.scss"
             ],
             "scripts": []
