--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.1.0",
-    "@angular/cdk": "^11.2.2",
+    "@angular/cdk": "^11.0.0",
     "@angular/common": "~11.1.0",
     "@angular/compiler": "~11.1.0",
     "@angular/core": "~11.1.0",
@@ -20,9 +20,10 @@
     "@angular/platform-browser": "~11.1.0",
     "@angular/platform-browser-dynamic": "~11.1.0",
     "@angular/router": "~11.1.0",
+    "@nebular/eva-icons": "7.0.0",
+    "@nebular/theme": "^7.0.0",
+    "eva-icons": "^1.1.2",
     "font-awesome": "^4.7.0",
-    "primeicons": "^4.1.0",
-    "primeng": "^11.3.0-rc.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
@@ -31,6 +32,7 @@
     "@angular-devkit/build-angular": "~0.1101.0",
     "@angular/cli": "~11.1.0",
     "@angular/compiler-cli": "~11.1.0",
+    "@schematics/angular": "~11.1.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
